fixed categories link Visible categories and mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -1246,6 +1246,7 @@ $text: #202020;
       width: 100%;
       height: 100vh;
       z-index: 3;
+      overflow-y: scroll;
       &.active {
         left: -120%;
       }
@@ -1261,18 +1262,18 @@ $text: #202020;
           font-size: 30px;
         }
       }
-      li {
+      a {
         display: flex;
         justify-content: space-between;
         color: $text;
-        font-size: 20px;
+        font-size: 16px;
         padding: 15px;
         border-radius: 10px;
         span {
           i {
             text-align: center;
             width: 50px;
-            font-size: 28px;
+            font-size: 18px;
           }
         }
         &:hover {
